Fix up line breaks in table headers

--- a/site/styles/Dataset.module.scss
+++ b/site/styles/Dataset.module.scss
@@ -25,3 +25,12 @@
 .viewTab {
     padding-top: 1em;
 }
+
+.tableHeader {
+    width: 15%;
+    white-space: nowrap;
+}
+
+.noWrap {
+    white-space: nowrap;
+}
